# Caravaggio

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
include/engine/: Engine.h  Entry.h
include/engine/application/: Application.h  Macro.h
include/engine/events/: EventSystem.h  Events.h
include/engine/graphics/: Device.h  Graphics.h
include/engine/graphics/vulkan/: VKDevice.h  VKGraphics.h  vk.h
include/engine/platform/: Input.h  Platform.h
include/engine/platform/windows/: Win32.h
include/engine/scripting/: GameScript.h
include/engine/ui/: DrawArea.h  UIContent.h  UIData.h  UserInterface.h  WidgetManager.h  Window.h
include/engine/ui/fonts/: Font.h  FontSystem.h
include/engine/ui/widgets/: Image.h  Text.h  Widget.h
sandbox/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/application/: Application.cpp
src/events/: EventSystem.cpp
src/graphics/vulkan/: VKGraphics.cpp
src/platform/: Input.cpp  Platform.cpp
src/ui/: DrawArea.cpp  UIContent.cpp  UIData.cpp  UserInterface.cpp  Window.cpp
src/ui/fonts/: FontSystem.cpp
src/ui/widgets/: Image.cpp  Text.cpp
